deps/v8/test/message/fail/modules-import-redeclare3.out
*%(basename)s:6: SyntaxError: Identifier 'x' has already been declared
export let x = 42;
           ^
SyntaxError: Identifier 'x' has already been declared

